# code-review-platform

./: .env.example  .gitignore  CLAUDE.md  git-read.txt  pyproject.toml
.github/workflows/: code_review.yml
agents/: orchestrator.py  security_agent.py  style_agent.py  test_agent.py
core/: agent_base.py  event_bus.py  skill_registry.py
hooks/: on_pr_opened.py  on_review_complete.py
skills/: claude_review.py  complexity_check.py  linting.py  security_scan.py  test_runner.py
